--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/photo_cv.jpeg);"></div>
-				<h1 id="colorlib-logo"><a href="index.html">Steffania Sierra Galvis</a></h1>
+				<h1 id="colorlib-logo"><a href="#">Steffania Sierra Galvis</a></h1>
 				<span class="position"><a href="#">Data Scientist</a> in Italy </span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -91,7 +91,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 		</aside>
 
 		<div id="colorlib-main">
-			<section id="colorlib-hero" class="js-fullheight" data-section="home">
+			<!-- <section id="colorlib-hero" class="js-fullheight" data-section="home"> -->
 				<!-- <div class="flexslider js-fullheight">
 					<ul class="slides">
 				   	<li style="background-image: url(images/img_bg_1.jpg);">
@@ -170,20 +170,18 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									</div>
 								</div>
 							</div>
-							<div class="row">
+							<!-- <div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
 										<h2>I am happy to know you <br>that 300+ projects done sucessfully!</h2>
 										<a href="#" class="btn-hire">Hire me</a>
 									</div>
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
 			</section>
-
-
 			
 			<section class="colorlib-services" data-section="services">
 				<div class="colorlib-narrow-content">
