--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 		</aside>
 
 		<div id="colorlib-main">
-			<!-- <section id="colorlib-hero" class="js-fullheight" data-section="home"> -->
-				<!-- <div class="flexslider js-fullheight">
+			<!-- <section id="colorlib-hero" class="js-fullheight" data-section="home"> 
+				 <div class="flexslider js-fullheight">
 					<ul class="slides">
 				   	<li style="background-image: url(images/img_bg_1.jpg);">
 				   		<div class="overlay"></div>
@@ -127,8 +127,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 				   		</div>
 				   	</li>
 				  	</ul>
-			  	</div> -->
-			</section> 
+			  	</div> 
+			</section> -->
 
 			<section class="colorlib-about" data-section="about">
 				<div class="colorlib-narrow-content">
