--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
-					<!--	<li class="active"><a href="#" data-nav-section="home">Home</a></li> -->
-						<li><a href="#" data-nav-section="about">About</a></li>
+						<li class="active"><a href="#" data-nav-section="about">About</a></li>
+					<!--	<li class="active"><a href="#" data-nav-section="home">Home</a></li> 
+						<li><a href="#" data-nav-section="about">About</a></li>-->
 						<li><a href="#" data-nav-section="services">Projects</a></li>
 					<!--	<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
@@ -779,7 +780,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 				</div>
 			</section> -->
 
-		</div><!-- end:colorlib-main -->
+		</div><!-- end:colorlib-main --> 
 	</div><!-- end:container-wrap -->
 	</div><!-- end:colorlib-page -->
 
