--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 					<ul>
 						<li class="active"><a href="#" data-nav-section="about">About</a></li>
 					<!--	<li class="active"><a href="#" data-nav-section="home">Home</a></li> 
-						<li><a href="#" data-nav-section="about">About</a></li>-->
-						<li><a href="#" data-nav-section="services">Projects</a></li>
-					<!--	<li><a href="#" data-nav-section="skills">Skills</a></li>
+						<li><a href="#" data-nav-section="about">About</a></li>
+						<li><a href="#" data-nav-section="services">Services</a></li>
+						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
-						<li><a href="#" data-nav-section="experience">Experience</a></li>
-						<li><a href="#" data-nav-section="work">Work</a></li>
-						<li><a href="#" data-nav-section="blog">Blog</a></li>
+						<li><a href="#" data-nav-section="experience">Experience</a></li>-->
+						<li><a href="#" data-nav-section="work">Projects</a></li>
+					<!--	<li><a href="#" data-nav-section="blog">Blog</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li> -->
 					</ul>
 				</div>
@@ -184,7 +184,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 				</div>
 			</section>
 			
-			<section class="colorlib-services" data-section="services">
+			<!-- <section class="colorlib-services" data-section="services">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -262,7 +262,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					</div>
 				</div>
 			</section>
-			<!--
+			
 			<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
 				<div class="colorlib-narrow-content">
@@ -552,13 +552,13 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   </div>
 				   </div>
 				</div>
-			</section>
+			</section> -->
 
 			<section class="colorlib-work" data-section="work">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">My Work</span>
+							<span class="heading-meta">Projects</span>
 							<h2 class="colorlib-heading animate-box">Recent Work</h2>
 						</div>
 					</div>
@@ -665,7 +665,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 					</div>
 				</div>
-			</section> -->
+			</section> 
 
 			<!-- <section class="colorlib-blog" data-section="blog">
 				<div class="colorlib-narrow-content">
