--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
+	<!-- Font Awesome icons -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -59,7 +61,10 @@
 				<div class="author-img" style="background-image: url(images/photo_cv.jpeg);"></div>
 				<h1 id="colorlib-logo"><a href="#">Steffania Sierra Galvis</a></h1>
 				<span class="position"><a href="#">Data Scientist</a> in Italy </span>
-			</div>
+				<a aria-label="Send email" href="mailto:steffaniasierrag@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+				<a aria-label="My Github" target="_blank" href="https://github.com/steffaniasierrag"><i class="fa-brands fa-github" aria-hidden="true"></i></a>	
+				<a aria-label="My linkedin" target="_blank" href="https://www.linkedin.com/in/steffania-sierrag/"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i></a>
+				</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
