Update index file

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 				<div class="author-img" style="background-image: url(images/photo_cv.jpeg);"></div>
 				<h1 id="colorlib-logo"><a href="#">Steffania Sierra Galvis</a></h1>
 				<span class="position"><a href="#">Data Scientist</a> in Italy </span>
-				<a aria-label="Send email" href="mailto:steffaniasierrag@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-				<a aria-label="My Github" target="_blank" href="https://github.com/steffaniasierrag"><i class="fa-brands fa-github" aria-hidden="true"></i></a>	
-				<a aria-label="My linkedin" target="_blank" href="https://www.linkedin.com/in/steffania-sierrag/"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i></a>
+				<a class='social' aria-label="Send email" href="mailto:steffaniasierrag@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+				<a class='social' aria-label="My Github" target="_blank" href="https://github.com/steffaniasierrag"><i class="fa-brands fa-github" aria-hidden="true"></i></a>	
+				<a class='social' aria-label="My linkedin" target="_blank" href="https://www.linkedin.com/in/steffania-sierrag/"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i></a>
 				</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
